[package]
name = "rust-space-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["alloc"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rand = { version = "0.8.5", features = ["std"] }
rand_distr = { version = "0.4.3", features = ["std"] }